<resources>
    <string name="app_name">Travlendar+</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password_mandatory">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">Sign in</string>
    <string name="Message_register">Choose a username and a password.</string>
    <string name="Rewrite_password">Please, insert again the chosen password.</string>
    <string name="ip_address">Server IP address</string>
    <string name="server_address">Server IP address</string>
    <string name="title_activity_side_menu">Side_menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings_tab_layout">settings_tab_layout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="send_to_server">Send to server</string>
    <string name="save_pref">Save preferences</string>
    <string name="offline_mode_checkbox">Offline mode (only for debugging)</string>
    <string name="offline_mode_checkbox_formatted">Offline mode\\n(only for debugging)</string>
    <string name="new_act">Create a new activity</string>
    <string name="new_activity_name">New activity name</string>
    <string name="start_time">Starts at:</string>
    <string name="name">Name:</string>
    <string name="end_time">Ends at:</string>
    <string name="postal_address">Address</string>
    <string name="where">Specify a destination:</string>
    <string name="starting_point">Specify a starting point:</string>
    <string name="notes">Notes</string>
    <string name="add">Add activity</string>
    <string name="cancel">Cancel</string>
    <string name="start_date">Starting day</string>
    <string name="end_date">End day</string>
    <string name="flexible">Is it flexible?</string>
    <string name="duration">Duration, if flexible</string>
    <string name="user_profile">profile</string>
    <string name="tags">Check/delete your tags:</string>
    <string name="add_tag">or add a new tag:</string>
    <string name="tag_hint">Tag</string>
    <string name="add_tag_button">add tag</string>
    <string name="check_tags">check</string>
    <string name="faq">FAQ:</string>
    <string name="faq1">What does Travlendar+ do? Travlendar helps you to schedule in the better way possible your day.</string>
    <string name="et_def_value">"0"</string>
    <string name="indications">Next activity indications</string>
    <string name="select_time">Select time...</string>
    <string name="select_tag">Select tag...</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="welcome_message">Just wait a few seconds. You\'ll have many more back thanks to Travlendar+ ;)</string>
    <string name="update_act">Update activity:</string>
    <string name="info">If (start/end) day changes, please re-insert also the (start/end) time.</string>
    <string name="info_new_activity">Please notice that in order to enhance server performances and provide you a better user experience, new activities can be added with interval of 15 mins. Feel free to create your activities as you wish, the system will handle this for you, optimizing your schedule.</string>
    <string name="search_bar_hint">Lookin\' for something?</string>
</resources>
