<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="biasiellicapodifatta.travlendar.layouts.SettingsMenu">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/settingsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="155dp"
                android:layout_marginStart="155dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:contentDescription="@string/user_profile"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:text="@string/tags"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:text="@string/check_tags" />

            <TextView
                android:id="@+id/add_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_tag"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/postal_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:hint="@string/tag_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:text="@string/add_tag_button"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/FAQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FAQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq1" />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
