<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="biasiellicapodifatta.travlendar.layouts.UpdateActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="450dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/head"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="50dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <Switch
                android:id="@+id/flex_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flexible"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/duration_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/duration"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/start_head"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/start_time"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datePicker_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:headerBackground="@color/colorPrimary" />

            <EditText
                android:id="@+id/selectTimeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/select_time"
                android:inputType="time" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/end_head"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/end_time"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/datePicker_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:headerBackground="@color/colorPrimary" />

            <EditText
                android:id="@+id/selectTimeEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/select_time"
                android:inputType="time" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/start_position_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starting_point"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/start_position_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/postal_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/start_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/select_tag"
                android:inputType="text" />

            <TextView
                android:id="@+id/destination_position_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/destination_position_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/postal_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/end_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/select_tag"
                android:inputType="text" />

            <TextView
                android:id="@+id/notes_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/notes_form"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:ems="10"
                android:hint="@string/notes"
                android:inputType="text|textMultiLine"
                android:textAlignment="textStart" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="43dp" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="0dp"
                android:text="@string/update"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="?attr/colorError"
                android:elevation="0dp"
                android:text="@string/delete"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="?android:attr/colorButtonNormal"
                android:text="@string/cancel"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="51dp" />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
